--- a/Intermediate_2/15. Web Development - Template Engine - Jinja2.ipynb
+++ b/Intermediate_2/15. Web Development - Template Engine - Jinja2.ipynb
@@ -314,11 +314,10 @@
     "    - Email address\n",
     "    - Subject\n",
     "    - Content\n",
+    "- Submitted form data should be validated accordingly.\n",
+    "- Invalid forms should not be accepted and return the respective errors.\n",
+    "- Valid forms should print the submitted info to the console.\n",
     "- Page should flash a message confirming the submitted form\n",
-    "\n",
-    "Submitted form data should be validated accordingly.\n",
-    "Invalid forms should not be accepted and return the respective errors.\n",
-    "Valid forms should print the submitted info to the console.\n",
     "\"\"\""
    ]
   }
