--- a/Intermediate_2/14. Web Development - Framework - Flask.ipynb
+++ b/Intermediate_2/14. Web Development - Framework - Flask.ipynb
@@ -340,9 +340,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Other Flask functions\n",
+    "## Other Flask methods\n",
     "\n",
-    "There are other functions available to import from Flask. We'll use some of them later but for now, these are some of the common ones."
+    "There are other methods and objects available to import from Flask. One worth noting is the [request](http://flask.pocoo.org/docs/0.10/quickstart/#the-request-object) object. Another method worth mentioning is [flash](http://flask.pocoo.org/docs/0.10/quickstart/#message-flashing) for notification messages to the user.\n",
+    "\n",
+    "We'll use some of them later but for now, these are some of the common ones.\n",
+    "\n",
+    "#### Exercise:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Create a simple Flask app.\n",
+    "\n",
+    "Experiment on the various flask methods you just learned.\n",
+    "\n",
+    "Practice using both kinds of writing views:\n",
+    "- Function-Based View\n",
+    "- Class-Based View\n",
+    "\n",
+    "Write views that accept variables via:\n",
+    "- URL\n",
+    "- query string (?key=value&other=stuff)\n",
+    "- submitted form\n",
+    "\"\"\""
    ]
   }
  ],
