hint on request object

--- a/Intermediate_2/14. Web Development - Framework - Flask.ipynb
+++ b/Intermediate_2/14. Web Development - Framework - Flask.ipynb
@@ -342,7 +342,7 @@
    "source": [
     "## Other Flask methods\n",
     "\n",
-    "There are other methods and objects available to import from Flask. One worth noting is the [request](http://flask.pocoo.org/docs/0.10/quickstart/#the-request-object) object. Another method worth mentioning is [flash](http://flask.pocoo.org/docs/0.10/quickstart/#message-flashing) for notification messages to the user.\n",
+    "There are other methods and objects available to import from Flask. One worth noting is the [request](http://flask.pocoo.org/docs/0.10/quickstart/#the-request-object) object. Read up on this because this will be used in the exercise. Another method worth mentioning is [flash](http://flask.pocoo.org/docs/0.10/quickstart/#message-flashing) for notification messages to the user.\n",
     "\n",
     "We'll use some of them later but for now, these are some of the common ones.\n",
     "\n",
