forms and flask request object

--- a/Intermediate_2/14. Web Development - Framework - Flask.ipynb
+++ b/Intermediate_2/14. Web Development - Framework - Flask.ipynb
@@ -340,11 +340,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Other Flask methods\n",
+    "## Request object\n",
     "\n",
-    "There are other methods and objects available to import from Flask. One worth noting is the [request](http://flask.pocoo.org/docs/0.10/quickstart/#the-request-object) object. Read up on this because this will be used in the exercise. Another method worth mentioning is [flash](http://flask.pocoo.org/docs/0.10/quickstart/#message-flashing) for notification messages to the user.\n",
+    "There are other methods and objects available to import from Flask. One worth noting is the [request](http://flask.pocoo.org/docs/0.10/quickstart/#the-request-object) object.\n",
     "\n",
-    "We'll use some of them later but for now, these are some of the common ones.\n",
+    "In the beginning of this notebook, HTTP was mentioned. There are several methods in HTTP and communication over the internet is made in any one of those methods. Requesting for a resource, be it a webpage or data, uses a `GET` method. With this method, data is only read, no changes are made. When submitting changes, whether via a form submission or behavior in javascript, usually a `POST` method is used. There are other methods available but for now we'll focus on `GET` and `POST`. This can be checked with `request.method` when the request object is imported from flask.\n",
+    "\n",
+    "```\n",
+    "from flask import request\n",
+    "\n",
+    "@app.route('/login', methods=['GET', 'POST'])\n",
+    "def login():\n",
+    "    if request.method == 'POST':\n",
+    "        do_the_login()\n",
+    "    else:\n",
+    "        show_the_login_form()\n",
+    "```\n",
     "\n",
     "#### Exercise:"
    ]
@@ -369,7 +380,7 @@
     "Write views that accept variables via:\n",
     "- URL\n",
     "- query string (?key=value&other=stuff)\n",
-    "- submitted form\n",
+    "- form\n",
     "\"\"\""
    ]
   }
