modified  notebook example and finish working app

--- a/Intermediate_2/16. Web Development - From Handling - WTForms.ipynb
+++ b/Intermediate_2/16. Web Development - From Handling - WTForms.ipynb
@@ -81,30 +81,33 @@
    "outputs": [],
    "source": [
     "# our view function\n",
+    "from flask import Flask, render_template, request\n",
     "\n",
-    "@app.route('/register', methods=['GET', 'POST'])\n",
+    "@app.route('/', methods=['GET', 'POST'])\n",
     "def register():\n",
-    "    form = RegistrationForm(request.form)\n",
+    "    form = RegistrationForm(request.form or None)\n",
+    "    context = {\n",
+    "        'form': form,\n",
+    "    }\n",
     "\n",
-    "    if request.method == 'POST' and form.validate():\n",
-    "    # if form.validate_on_submit():  # this method is available in `from flask.ext.wtf import Form`\n",
+    "    # if request.method == 'POST' and form.validate():\n",
+    "    if form.validate_on_submit():  # this method is available in `from flask.ext.wtf.Form`\n",
+    "        context['form_data'] = form.data\n",
     "\n",
-    "        # do something with the data\n",
-    "        # here, we use it to instantiate and save an imaginary User object\n",
-    "        user = User(form.username.data, form.email.data, form.password.data)\n",
-    "        user.save()\n",
+    "    return render_template('register.html', **context)\n",
     "\n",
-    "        flash('Thanks for registering')\n",
-    "        return redirect(url_for('login'))\n",
-    "\n",
-    "    return render_template('register.html', form=form)"
+    "if __name__ == '__main__':\n",
+    "    app.secret_key = 'SECRET_KEY'\n",
+    "    app.run(debug=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In our `register()` function, the `RegistrationForm` gets instantiated either with the `request.form` data if it is available or `None` as default. Validation will fail when there is no data but will go through the validation process if there is. Form errors will be returned if validation fails.\n",
     "\n",
+    "In our conditional statement, the form data is added to the context data passed to the template. We'll just render this in the page. The template code is below.\n",
     "\n",
     "## Render the {{ form }}"
    ]
@@ -113,21 +116,62 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "<form method=\"POST\" action=\"/register\">\n",
-    "    <div>{{ form.username.label }}: {{ form.username(class=\"css_class\") }}</div>\n",
+    "%%html\n",
+    "<h1>Registration</h1>\n",
+    "{% if form_data %}\n",
+    "    <h2>Thanks for submitting!</h2>\n",
+    "    {% for key, value in form_data.items() %}\n",
+    "        <p>{{ key }}: {{ value }}</p>\n",
+    "    {% endfor %}\n",
+    "{% endif %}\n",
+    "\n",
+    "<form method=\"POST\" action=\"/\">\n",
+    "    <div>{{ form.username.label }}: {{ form.username() }}</div>\n",
+    "    {% if form.username.errors %}\n",
+    "        <ul class=\"errors\">{% for error in form.username.errors %}<li>{{ error }}</li>{% endfor %}</ul>\n",
+    "    {% endif %}\n",
+    "\n",
     "    <div>{{ form.email.label }}: {{ form.email() }}</div>\n",
+    "    {% if form.email.errors %}\n",
+    "        <ul class=\"errors\">{% for error in form.email.errors %}<li>{{ error }}</li>{% endfor %}</ul>\n",
+    "    {% endif %}\n",
+    "\n",
     "    <div>{{ form.password.label }}: {{ form.password() }}</div>\n",
+    "    {% if form.password.errors %}\n",
+    "        <ul class=\"errors\">{% for error in form.password.errors %}<li>{{ error }}</li>{% endfor %}</ul>\n",
+    "    {% endif %}\n",
+    "\n",
+    "    <div>{{ form.confirm.label }}: {{ form.confirm() }}</div>\n",
+    "    {% if form.confirm.errors %}\n",
+    "        <ul class=\"errors\">{% for error in form.confirm.errors %}<li>{{ error }}</li>{% endfor %}</ul>\n",
+    "    {% endif %}\n",
+    "\n",
+    "    {{ form.csrf_token }}\n",
+    "    <button value=\"submit\">Submit</button>\n",
     "</form>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In our template code, the first part just displays the submitted form data if available.\n",
+    "\n",
+    "The second part is our form. The `<form>` tag should be included in the HTML together with the `method` and `action` attributes.\n",
+    "\n",
+    "Nested in the HTML form are attributes of the form object generated from WTForms. We are displaying each per form field:\n",
+    "- Label\n",
+    "- Input\n",
+    "- Errors (if any)\n",
+    "\n",
+    "Then finally the submit button.\n",
+    "\n",
+    "Let's see the code in action."
+   ]
   },
   {
    "cell_type": "code",
@@ -135,34 +179,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      " * Restarting with stat\n",
-      " * Debugger is active!\n",
-      " * Debugger pin code: 316-047-175\n",
-      "register1\n",
-      "register2\n",
-      "register5\n",
-      "127.0.0.1 - - [08/Mar/2016 01:38:45] \"GET /register HTTP/1.1\" 200 -\n",
-      "register1\n",
-      "register2\n",
-      "register5\n",
-      "127.0.0.1 - - [08/Mar/2016 01:38:56] \"POST /register HTTP/1.1\" 200 -\n",
-      "register1\n",
-      "register2\n",
-      "register5\n",
-      "127.0.0.1 - - [08/Mar/2016 01:39:02] \"POST /register HTTP/1.1\" 200 -\n",
-      "register1\n",
-      "register2\n",
-      "register5\n",
-      "127.0.0.1 - - [08/Mar/2016 01:39:26] \"GET /register HTTP/1.1\" 200 -\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python app.py"
    ]
