add forms exercise

--- a/Intermediate_2/16. Web Development - From Handling - WTForms.ipynb
+++ b/Intermediate_2/16. Web Development - From Handling - WTForms.ipynb
@@ -185,13 +185,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "This small Flask demo uses WTForms to create a registration form that displays submitted data on the page. It uses the code in the examples. Study it and read the documentation for more information.\n",
+    "\n",
+    "#### Exercise:\n",
+    "\n",
+    "Create an app that lets users sign up and login. Make it simple, just to demonstrate building forms and processing input."
+   ]
   }
  ],
  "metadata": {
