moved exercises to markdown blocks

--- a/Intermediate_2/15. Web Development - Template Engine - Jinja2.ipynb
+++ b/Intermediate_2/15. Web Development - Template Engine - Jinja2.ipynb
@@ -280,18 +280,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exercise:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
+    "#### Exercise:\n",
+    "\n",
     "Create a Flask app:\n",
     "\n",
     "- Theme is an upcoming real or imaginary product\n",
@@ -302,10 +292,12 @@
     "- Name is a string, Features is a list of strings, Release date is a datetime.date instance\n",
     "- For now, values are hardcoded\n",
     "\n",
+    "\n",
     "- Only one page\n",
     "- Page should prominently display the name of the product\n",
     "- Page should list the features of the product\n",
     "- When the date is equal to or after the release date, a \"Buy now\" button should appear (It can link to anywhere)\n",
+    "\n",
     "\n",
     "- Page should include a \"Subscribe to our mailing list\" form with the field:\n",
     "    - Email address\n",
@@ -317,8 +309,7 @@
     "- Submitted form data should be validated accordingly.\n",
     "- Invalid forms should not be accepted and return the respective errors.\n",
     "- Valid forms should print the submitted info to the console.\n",
-    "- Page should flash a message confirming the submitted form\n",
-    "\"\"\""
+    "- Page should flash a message confirming the submitted form"
    ]
   }
  ],
