--- a/Intermediate_2/16. Web Development - From Handling - WTForms.ipynb
+++ b/Intermediate_2/16. Web Development - From Handling - WTForms.ipynb
@@ -194,7 +194,7 @@
     "\n",
     "#### Exercise:\n",
     "\n",
-    "Create an app that lets users sign up and login. Make it simple, just to demonstrate building forms and processing input."
+    "In the previous notebook, you created a webpage that showcases an upcoming product. Recreate with and use WTForms. Add an admin login to it. You can hardcode the admin credentials for now."
    ]
   }
  ],
