moved exercises to markdown blocks

--- a/Intermediate_2/14. Web Development - Framework - Flask.ipynb
+++ b/Intermediate_2/14. Web Development - Framework - Flask.ipynb
@@ -357,18 +357,8 @@
     "        show_the_login_form()\n",
     "```\n",
     "\n",
-    "#### Exercise:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
+    "#### Exercise:\n",
+    "\n",
     "Create a simple Flask app.\n",
     "\n",
     "Experiment on the various flask methods you just learned.\n",
@@ -380,8 +370,7 @@
     "Write views that accept variables via:\n",
     "- URL\n",
     "- query string (?key=value&other=stuff)\n",
-    "- form\n",
-    "\"\"\""
+    "- form"
    ]
   }
  ],
