added debugger screenshot

--- a/Intermediate_2/17. Debugging and Logging Modules.ipynb
+++ b/Intermediate_2/17. Debugging and Logging Modules.ipynb
@@ -27,7 +27,9 @@
     "\n",
     "### Werkzeug Debugger\n",
     "\n",
-    "In our Flask app, Werkzeug (one of Flask's dependencies) shows an error page when something goes wrong. For each line of code in the traceback, you can click it to expand it. There's also a small icon on the right most side of each line that gives you access to the debugger console. \n",
+    "![Werzeug Debugger](Images/debug-screenshot.png)\n",
+    "\n",
+    "In our Flask app, Werkzeug (one of Flask's dependencies) shows an error page when something goes wrong. For each line of code in the traceback, you can click it to expand it. There's also a small icon on the right most side of each line that gives you access to the debugger console after entering the PIN. The PIN is given in the console when the Flask server starts.\n",
     "\n",
     "Werkzeug integrates the debugger nicely in its error page. If you're not using Werkzeug, or are simply using something else, you'll always have pdb at your disposal to help debug your applications.\n",
     "\n",
