--- a/Intermediate_2/14. Web Development - Framework - Flask.ipynb
+++ b/Intermediate_2/14. Web Development - Framework - Flask.ipynb
@@ -93,6 +93,8 @@
     "\n",
     "### [Error page (Debugger)](http://127.0.0.1:8000/error)\n",
     "\n",
+    "![Werkzeug Debugger](Images/debugger.png)\n",
+    "\n",
     "Our third function does not return a response so it shows the debugger. Whenever you have bugs in your code, it's likely that you'll see this screen.\n",
     "\n",
     "### [Hello friend (pt 2)!](http://127.0.0.1:8000/friend/)\n",
